added forum to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 *.pyc
+*.db
+.htaccess
+robots.txt
 settings.py
 local_settings.py
-*.db
 logs/
+cron/
+forum/
 site_media/static/machiavelli/maps/
 machiavelli/media/machiavelli/maps/
 machiavelli/fixtures/
-.htaccess
-robots.txt
 maintenance.html*
 */migrations/
-cron/
 activate
