changed all references to 'game-list', to 'summary'

--- a/local_settings.py.example
+++ b/local_settings.py.example
@@ -48,7 +48,7 @@ ACCOUNT_EMAIL_VERIFICATION = False
 ACCOUNT_EMAIL_AUTHENTICATION = False
 ACCOUNT_UNIQUE_EMAIL = EMAIL_CONFIRMATION_UNIQUE_EMAIL = False
 
-LOGIN_REDIRECT_URLNAME = "game-list"
+LOGIN_REDIRECT_URLNAME = "summary"
 
 AUTHENTICATED_EXEMPT_URLS = [
 	r'^/$',
