integrated avatar in profile

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ cron/
 forum/
 site_media/static/machiavelli/maps/
 machiavelli/media/machiavelli/maps/
+site_media/static/machiavelli/avatars/
+machiavelli/media/machiavelli/avatars/
 maintenance.html*
 */migrations/
 activate
